# network_emulation_experiment

./: README.md  config.ini
netem_remote_simple/: Cargo.toml
netem_remote_simple/src/: main.rs
netem_rs_simple_link/: Cargo.toml  README.md  local.sh  local_env.toml  remote_grpc_1.sh  remote_grpc_2.sh  remote_xdp_1.sh  remote_xdp_2.sh
out_order_recorder/: Cargo.toml  README.md
out_order_recorder/src/: main.rs
remote_pingpong/: Cargo.toml  af_xdp_kern.c  env2.sh
remote_pingpong/src/: main.rs
remote_pingpong_zcg/: README.md  env1.sh
remote_pingpong_zcg/src/: main.rs
