[package]
name = "remote_pingpong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_xdp = { git = "https://github.com/ZENOTME/async_xdp",branch = "xdp_prog" }
tokio = { version = "1", features = ["full"] }
packet = "0.1.4"
hwaddr = "0.1.7"
rust-ini = "0.21.0"
